# hypotest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.server  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: server.example.yaml
docker/: cutoff_proxy.py  entrypoint.sh  smoke_test.py
src/hypotest/: benchmark_agent.py  dataset_server.py  regrade.py  s3_sync.py
src/hypotest/env/: code_safety.py  config.py  hybrid_gate.py  install_shim.py  interpreter.py  interpreter_env.py  kernel_server.py  notebook_env.py  prompts.py  wager.py
src/hypotest/env/tools/: filesystem.py
src/hypotest/env/utils/: __init__.py  core.py  img_utils.py  notebook_utils.py  workspace_utils.py
tests/: conftest.py  test_cell_timeout_override.py  test_dataset.py  test_hybrid_gate.py  test_install_shim.py  test_interpreter.py  test_interpreter_env.py  test_regrade.py  test_system.py  test_wager.py
tests/assets/system_test/: notebook.ipynb
tests/fixtures/: expected_tool_schemas.json
